<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TestsFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressTests"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="27dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/tele_serif_bold"
                        android:text="@string/text_menu_test2"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="27dp">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.chip.ChipGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:singleSelection="true"
                                android:layout_marginRight="10dp">

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_all"
                                    android:checked="true"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                                <com.google.android.material.chip.Chip
                                    style="@style/CustomChipChoice"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_category_common"
                                    android:textAppearance="@style/chipText"
                                    app:textEndPadding="16dp"
                                    app:textStartPadding="16dp" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_math"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_russian"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_english"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_history"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                                <com.google.android.material.chip.Chip
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    style="@style/CustomChipChoice"
                                    android:text="@string/text_category_sport"
                                    app:textStartPadding="16dp"
                                    app:textEndPadding="16dp"
                                    android:textAppearance="@style/chipText" />

                            </com.google.android.material.chip.ChipGroup>

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRecyclerTests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="12dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerTests"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>