<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".activities.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_main"
                android:fontFamily="@font/tele_serif_bold"
                android:textSize="24sp"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/text_registration_title"
                android:layout_marginHorizontal="31dp"
                android:layout_marginBottom="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/color_text_main"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRegistrationNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_nickname"
                        android:textColorHint="@color/color_text_main"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:textColor="@color/black_main"
                        android:maxLength="30"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textRegistrationNicknameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_error_registration_nickname"
                    android:textSize="14sp"
                    android:fontFamily="@font/tele_sans_regular"
                    android:textColor="@color/color_error"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/color_text_main"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRegistrationPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_phone_number"
                        android:textColorHint="@color/color_text_main"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:textColor="@color/black_main"
                        android:maxLength="30"
                        android:layout_marginTop="8dp"
                        android:inputType="phone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textRegistrationErrorPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_error_registration_phone_number"
                    android:textSize="14sp"
                    android:fontFamily="@font/tele_sans_regular"
                    android:textColor="@color/color_error"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/color_text_main"
                    >

                    <EditText
                        android:id="@+id/editTextRegistrationPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_password"
                        android:textColorHint="@color/color_text_main"
                        android:paddingHorizontal="18dp"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:textColor="@color/black_main"
                        android:maxLength="30"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textRegistrationPasswordError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_error_registration_password"
                    android:textSize="14sp"
                    android:fontFamily="@font/tele_sans_regular"
                    android:textColor="@color/color_error"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/color_text_main"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRegistrationName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_name"
                        android:textColorHint="@color/color_text_main"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:textColor="@color/black_main"
                        android:maxLength="30"
                        android:layout_marginTop="8dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:textColorHint="@color/color_text_main"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRegistrationSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="55dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/text_surname"
                        android:textColorHint="@color/color_text_main"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/cursor_style_edit_text"
                        android:textColor="@color/black_main"
                        android:maxLength="30"
                        android:layout_marginTop="8dp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <RadioGroup
                    android:id="@+id/radioGroupRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioRegistrationOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBox"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:textColor="@color/black_main"
                        android:layout_marginBottom="5dp"
                        android:text="@string/text_radio_one"/>

                    <RadioButton
                        android:id="@+id/radioRegistrationTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyCheckBox"
                        android:fontFamily="@font/tele_sans_regular"
                        android:textSize="16sp"
                        android:textColor="@color/black_main"
                        android:text="@string/text_radio_two"/>

                </RadioGroup>

                <TextView
                    android:id="@+id/textRegistrationRadioError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_error_registration_radio"
                    android:textSize="14sp"
                    android:fontFamily="@font/tele_sans_regular"
                    android:textColor="@color/color_error"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="21dp"
                        android:backgroundTint="@color/color_main"
                        android:fontFamily="@font/tele_serif_bold"
                        android:padding="15dp"
                        android:text="@string/text_button_registration"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="14dp"
                        android:textAllCaps="false"
                        android:stateListAnimator="@null"
                        android:textAppearance="?attr/textAppearanceBody2"/>

                    <ProgressBar
                        android:id="@+id/progressRegistration"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:visibility="invisible"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/buttonTextRegistrationHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_main"
                    android:fontFamily="@font/tele_sans_regular"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/text_have_account"
                    android:layout_marginHorizontal="31dp"
                    android:layout_marginBottom="24dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>