<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RoomsFragment"
    android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="27dp"
                    android:layout_marginTop="16dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/tele_serif_bold"
                            android:text="@string/text_menu_rooms2"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/imageButtonPlusRoom"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:backgroundTint="@color/white"
                            android:gravity="center"
                            app:borderWidth="0dp"
                            app:elevation="1dp"
                            android:src="@drawable/baseline_add_24"
                            app:tint="@color/color_plus"
                            app:maxImageSize="30dp"
                            app:fabSize="mini"/>
                        
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        android:textColorHint="@color/color_text_main"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextRegistrationNickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="55dp"
                            android:background="@drawable/edit_text_background"
                            android:hint="Код комнаты"
                            android:textColorHint="@color/color_text_main"
                            android:fontFamily="@font/tele_sans_regular"
                            android:textSize="16sp"
                            android:singleLine="true"
                            android:textCursorDrawable="@drawable/cursor_style_edit_text"
                            android:textColor="@color/black_main"
                            android:maxLength="30"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonEntryRooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_main"
                        android:fontFamily="@font/tele_serif_bold"
                        android:padding="15dp"
                        android:text="@string/text_entry"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:layout_marginTop="4dp"
                        app:cornerRadius="14dp"
                        android:textAllCaps="false"
                        android:stateListAnimator="@null"
                        android:textAppearance="?attr/textAppearanceBody2"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonScanQr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/tele_serif_bold"
                        android:padding="15dp"
                        app:strokeColor="@color/color_count"
                        app:strokeWidth="1dp"
                        android:text="@string/text_scan_qr"
                        android:textColor="@color/color_count"
                        android:textSize="16sp"
                        app:cornerRadius="14dp"
                        android:textAllCaps="false"
                        android:stateListAnimator="@null"
                        android:textAppearance="?attr/textAppearanceBody2"/>

                </LinearLayout>

            </LinearLayout>

</FrameLayout>